--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pachmarhi Ayurveda</title>
-</head>
-<body>
+    <link rel="stylesheet" href="./src/css/style.css" />
+  </head>
+  <body>
     <h1>Hello World!</h1>
     <p>Testing CICD for github</p>
-</body>
+    <script type="module" src="./src/js/script.js"></script>
+  </body>
 </html>
