- Added "hero text" - Added more styles to hero section.

--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
             />
           </svg>
         </button>
-        <p>
+        <p class="hero__text">
           How We Transformed a <br />
           Legacy Ayurveda Brand <br />
-          into a Digital Success
+          into a <span>Digital Success</span>
         </p>
       </section>
     </main>
