- Challenges and Branding section added

--- a/index.html
+++ b/index.html
@@ -36,9 +36,12 @@
       </nav>
     </header>
     <main class="main">
+      <!-- Hero Section -->
       <section class="hero" id="home">
         <p class="hero__subtitle">[Case Study]</p>
         <h1 class="hero__title">Pachmarhi Ayurveda</h1>
+
+        <!-- Scroll Down Button -->
         <button type="button" class="hero__button">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 640">
             <!--!Font Awesome Free v7.0.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.-->
@@ -48,16 +51,20 @@
           </svg>
         </button>
         <p class="hero__text">
-          How We Transformed a <br />
-          Legacy Ayurveda Brand <br />
-          into a <span>Digital Success</span>
+          How We Transformed a Legacy Ayurveda Brand into a
+          <span>Digital Success</span>
         </p>
       </section>
+
+      <!-- Industry Section -->
       <section class="industry">
+        <!-- Industry Title -->
         <div class="industry__title-container">
           <p class="industry__subtitle">[Industry]</p>
           <h2 class="industry__title">Healthcare</h2>
         </div>
+
+        <!-- Industry Services -->
         <div class="industry__services-container">
           <h3 class="industry__services-heading">Services Provided</h3>
           <button type="button" class="industry__services-button">
@@ -104,6 +111,8 @@
             <span class="label"> Digital Marketing </span>
           </button>
         </div>
+
+        <!-- Industry Overview -->
         <div class="industry__overview">
           <h3 class="industry__overview-heading">Overview</h3>
           <p class="industry__overview-text">
@@ -117,6 +126,71 @@
             nationwide sales opportunities.
           </p>
         </div>
+      </section>
+
+      <!-- Challenges Section -->
+      <section class="challenges">
+        <div class="challenges__title-container">
+          <h2 class="challenges__title">[Challenges]</h2>
+          <p class="challenges__text">
+            Despite their strong offline reputation,
+            <span>Pachmarhi Ayurveda</span> faced several hurdles in the digital
+            space
+          </p>
+        </div>
+        <ul class="challenges_items">
+          <li class="challenges__item">
+            <h3 class="challenges_item-title">
+              Limited <span>Digital Presence</span>
+            </h3>
+            <p class="challenges_item-body">
+              No significant reach or branding across online platforms.
+            </p>
+          </li>
+          <li class="challenges__item">
+            <h3 class="challenges_item-title">
+              No <span>Social Media Strategy</span>
+            </h3>
+            <p class="challenges_item-body">
+              Struggled with organic reach and lacked engaging content.
+            </p>
+          </li>
+          <li class="challenges__item">
+            <h3 class="challenges_item-title">
+              No <span>E-commerce website</span>
+            </h3>
+            <p class="challenges_item-body">
+              Initially, the client did not believe in the power of digital
+              platforms.
+            </p>
+          </li>
+          <li class="challenges__item">
+            <h3 class="challenges_item-title">
+              <span>Trust</span> issues in the ayurvedic industry
+            </h3>
+            <p class="challenges_item-body">
+              Many fake brands existed in the market, making credibility a key
+              factor.
+            </p>
+          </li>
+        </ul>
+      </section>
+
+      <!-- Solution Section -->
+      <section class="approach">
+        <h2 class="approach__title">[Our Approach]</h2>
+        <div class="approach__block">
+          <h3 class="approach__block-title">Rebranding Digital Presence</h3>
+          <p class="approach__block-text">
+            Established Pachmarhi Ayurveda as a credible and trustworthy brand
+            in the online market
+          </p>
+        </div>
+        <div class="approach__laptop-mockup"></div>
+      </section>
+      <section class="branding">
+        <div class="branding__phone-mockup"></div>
+        <div class="branding__logo-placeholder"></div>
       </section>
     </main>
 
