--- a/index.html
+++ b/index.html
@@ -174,6 +174,11 @@
             </p>
           </li>
         </ul>
+        <img
+          class="challenges__dart-board"
+          src="./src/images/dart-board.png"
+          alt="Dart Board"
+        />
       </section>
 
       <!-- Solution Section -->
@@ -186,11 +191,17 @@
             in the online market
           </p>
         </div>
-        <div class="approach__laptop-mockup"></div>
+        <figure class="approach__laptop-mockup">
+          <img src="./src/images/laptop-mockup.png" alt="Laptop Mockup" />
+        </figure>
       </section>
       <section class="branding">
-        <div class="branding__phone-mockup"></div>
-        <div class="branding__logo-placeholder"></div>
+        <figure class="branding__phone-mockup">
+          <img src="./src/images/phone-mockup.png" alt="Phone Mockup" />
+        </figure>
+        <figure class="branding__brand">
+          <img src="./src/images/brand.png" alt="brand" />
+        </figure>
       </section>
     </main>
 
