- Added social media section

--- a/index.html
+++ b/index.html
@@ -350,6 +350,19 @@
           </div>
         </div>
       </section>
+
+      <section class="social-media">
+        <div class="social-media__block">
+          <h2 class="social-media__title">Organic Social Media Growth</h2>
+          <p class="social-media__text">
+            Developed engaging and educational content that resonated with
+            Ayurveda audiences.
+          </p>
+        </div>
+        <figure class="social-media__image">
+          <img src="./src/images/instagram-mockup.png" alt="Instagram Mockup" />
+        </figure>
+      </section>
     </main>
 
     <script type="module" src="./src/js/script.js"></script>
