- Added transformation section

--- a/index.html
+++ b/index.html
@@ -351,6 +351,7 @@
         </div>
       </section>
 
+      <!-- social media section -->
       <section class="social-media">
         <div class="social-media__block">
           <h2 class="social-media__title">Organic Social Media Growth</h2>
@@ -362,6 +363,74 @@
         <figure class="social-media__image">
           <img src="./src/images/instagram-mockup.png" alt="Instagram Mockup" />
         </figure>
+      </section>
+
+      <!-- Transformation Section -->
+      <section class="transformation">
+        <div class="transformation__block-wrapper">
+          <div class="transformation__block transformation__before">
+            <h3 class="transformation__title">Before</h3>
+            <div class="transformation__body">
+              <figure class="transformation__image">
+                <img src="./src/images/before.png" alt="Before" />
+              </figure>
+              <ul class="transformation__items">
+                <li class="transformation__item">
+                  ❗Inconsistent brand colors
+                </li>
+                <li class="transformation__item">❗Random posting schedule</li>
+                <li class="transformation__item">❗Low audience engagement</li>
+                <li class="transformation__item">❗Weak visual quality</li>
+              </ul>
+            </div>
+          </div>
+          <svg
+            width="30"
+            height="30"
+            viewBox="0 0 30 30"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+            class="transformation__double-arrow"
+          >
+            <path
+              d="M21.9826 15L12.8663 24.1162L14.6338 25.8837L25.5176 15L14.6338 4.11621L12.8663 5.88371L21.9826 15Z"
+              fill="#19183A"
+            />
+            <path
+              d="M7.13383 4.11621L5.36633 5.88371L14.4826 15L5.36633 24.1162L7.13383 25.8837L18.0176 15L7.13383 4.11621Z"
+              fill="#19183A"
+            />
+          </svg>
+
+          <div class="transformation__block transformation__after">
+            <h3 class="transformation__title">After</h3>
+            <div class="transformation__body">
+              <figure class="transformation__image">
+                <img src="./src/images/after.png" alt="After" />
+              </figure>
+              <ul class="transformation__items">
+                <li class="transformation__item">
+                  ✓ Cohesive branding calendar
+                </li>
+                <li class="transformation__item">✓ Strategic content</li>
+                <li class="transformation__item">
+                  ✓ Interactive, engaging posts
+                </li>
+                <li class="transformation__item">
+                  ✓ Professional, polished visuals
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <h3 class="transformation__question">what improved?</h3>
+        <p class="transformation__answer">
+          <span class="counter">+150%</span> Followers
+          <span class="separator">|</span><br />
+          <span class="counter">2x</span> Engagement
+          <span class="separator">|</span><br />
+          <span class="counter">+60%</span> Website Traffic
+        </p>
       </section>
     </main>
 
