- Added E Commerce section with it's video

--- a/index.html
+++ b/index.html
@@ -432,6 +432,20 @@
           <span class="counter">+60%</span> Website Traffic
         </p>
       </section>
+
+      <!-- E-Commerce Section -->
+      <section class="e-commerce">
+        <h2 class="e-commerce__title">E-commerce Website Development</h2>
+        <p class="e-commerce__text">
+          Designed and launched a user-friendly, conversion-optimized website
+          within one month.
+        </p>
+        <figure id="e-commerce-video-wrapper" class="e-commerce__video">
+          <video id="e-commerce-video" loop muted>
+            <source src="./src/videos/e-commerce.mp4" type="video/mp4" />
+          </video>
+        </figure>
+      </section>
     </main>
 
     <script type="module" src="./src/js/script.js"></script>
