- Added PR & Brand Awareness section

--- a/index.html
+++ b/index.html
@@ -446,6 +446,54 @@
           </video>
         </figure>
       </section>
+
+      <!-- Brand Awareness -->
+      <section class="pr">
+        <div class="pr__block">
+          <h3 class="pr__block-title">PR & Brand Awareness Initiatives</h3>
+          <p class="pr__block-text">
+            Built credibility through media coverage and online trust-building
+            efforts.
+          </p>
+        </div>
+        <figure class="pr__image">
+          <img src="./src/images/pr.png" alt="PR" />
+          <figcaption>
+            Recognized with First Prize at 10th International Herbal Trade Fair
+          </figcaption>
+        </figure>
+        <div class="pr__logos">
+          <img
+            src="./src/images/times_of_india.png"
+            alt="Times OF India"
+            srcset=""
+          />
+          <img
+            src="./src/images/news_pulse_india.png"
+            alt="News Pulse "
+            srcset=""
+          />
+          <img src="" alt="" srcset="" /><img
+            src="./src/images/news_today.png"
+            alt="Newz Today "
+            srcset=""
+          />
+          <img
+            src="./src/images/express_times.png"
+            alt="Express Times"
+            srcset=""
+          />
+          <img
+            src="./src/images/common_topics.png"
+            alt="Common Topics"
+            srcset=""
+          />
+          <img
+            src="./src/images/the_hindustan_express.png"
+            alt="The Hindustan Express"
+          />
+        </div>
+      </section>
     </main>
 
     <script type="module" src="./src/js/script.js"></script>
