--- a/index.html
+++ b/index.html
@@ -494,6 +494,66 @@
           />
         </div>
       </section>
+
+      <!-- Results Section -->
+      <section class="results">
+        <h2 class="results__title">THE RESULTS</h2>
+        <div class="results__card">
+          <div class="results__card-info">
+            <h3 class="results__card-title">
+              🏆 Dominating <br /><span>Digital Presence</span>
+            </h3>
+            <p class="results__card-text">
+              Became one of the top Ayurvedic brands online with a strong
+              following
+            </p>
+          </div>
+          <figure class="results__card-image">
+            <img src="./src/images/dominating-digital-presence.png" alt="" />
+          </figure>
+        </div>
+        <div class="results__card">
+          <figure class="results__card-image">
+            <img src="./src/images/successful-e-commerce-launch.png" alt="" />
+          </figure>
+          <div class="results__card-info">
+            <h3 class="results__card-title">
+              🛒 Successful <br />
+              <span>e-cOMMERECE LAUNCH</span>
+            </h3>
+            <p class="results__card-text">
+              Enabled nationwide online sales, increasing accessibility.
+            </p>
+          </div>
+        </div>
+        <div class="results__card">
+          <div class="results__card-info">
+            <h3 class="results__card-title">
+              💰 5-7X <br /><span>Monthly Growth</span>
+            </h3>
+            <p class="results__card-text">
+              Online sales increased month over month (MoM) by 5-7X
+            </p>
+          </div>
+          <figure class="results__card-image">
+            <img src="./src/images/monthly-growth.png" alt="" />
+          </figure>
+        </div>
+        <div class="results__card">
+          <figure class="results__card-image">
+            <img src="./src/images/expand-customer-base.png" alt="" />
+          </figure>
+          <div class="results__card-info">
+            <h3 class="results__card-title">
+              👥 Expanded <br /><span>Customer Base</span>
+            </h3>
+            <p class="results__card-text">
+              Increased potential buyers through data-driven marketing
+              campaigns.
+            </p>
+          </div>
+        </div>
+      </section>
     </main>
 
     <script type="module" src="./src/js/script.js"></script>
