--- a/index.html
+++ b/index.html
@@ -604,6 +604,15 @@
           </p>
         </div>
       </section>
+
+      <!-- Conclusion -->
+      <section class="conclusion">
+        <p class="conclusion__text">
+          With a powerful digital presence and consistent online growth,
+          Pachmarhi Ayurveda has successfully expanded beyond its offline roots,
+          proving that even traditional brands can thrive in the digital age .
+        </p>
+      </section>
     </main>
 
     <script type="module" src="./src/js/script.js"></script>
