--- a/index.html
+++ b/index.html
@@ -613,6 +613,35 @@
           proving that even traditional brands can thrive in the digital age .
         </p>
       </section>
+
+      <!-- Call to Action -->
+      <section class="cta">
+        <figure class="cta__logo">
+          <img src="./src/images/logo-large.png" alt="Obsedian Six" />
+        </figure>
+        <div class="cta__block">
+          <h2 class="cta__block-title">
+            Start your journey towards <span>growth</span>
+          </h2>
+          <a href="mailto:ZmH8p@example.com" class="cta__block-button"
+            ><svg
+              width="72"
+              height="72"
+              viewBox="0 0 72 72"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M36 57L57 36M57 36L36 15M57 36L15 36"
+                stroke="#19183A"
+                stroke-width="3"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              />
+            </svg>
+          </a>
+        </div>
+      </section>
     </main>
 
     <script type="module" src="./src/js/script.js"></script>
