- Added footer section

--- a/index.html
+++ b/index.html
@@ -644,6 +644,102 @@
       </section>
     </main>
 
+    <footer class="footer">
+      <div class="footer__block">
+        <figure class="footer__left">
+          <img src="./src/images/logo.png" alt="Obsedian Six" />
+          <figcaption>
+            Your growth partner in the digital age — we design brands, build
+            websites, and market businesses for success. With creativity and
+            strategy, we make your vision a reality.
+          </figcaption>
+        </figure>
+        <ul class="footer__right">
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Works</a></li>
+          <li><a href="#">Services</a></li>
+          <li><a href="#">Blogs</a></li>
+          <li><a href="#">About Us</a></li>
+          <li><a href="#">Contact Us</a></li>
+        </ul>
+      </div>
+      <hr />
+      <div class="footer__info-block">
+        <ul class="footer__info-left">
+          <li>
+            <a href="#"
+              >96/2 Ravidas Nagar near Bhawani Parisar Indrapuri, Bhopal Madhya
+              Pradesh India Pincode 462023.</a
+            >
+          </li>
+          <li><a href="#">+919961662729</a></li>
+          <li>
+            <a href="#">info@obsidiansix.io</a>
+          </li>
+        </ul>
+        <ul class="footer__info-right">
+          <li>
+            <a href="#"
+              ><svg
+                width="34"
+                height="34"
+                viewBox="0 0 34 34"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  fill-rule="evenodd"
+                  clip-rule="evenodd"
+                  d="M5.3862 33.6247C4.05858 33.6247 2.79746 33.0975 1.84746 32.1594C0.897455 31.2212 0.38208 29.9482 0.38208 28.6206V5.36936C0.38208 4.04173 0.90933 2.78061 1.84746 1.83061C2.78558 0.880609 4.05858 0.365234 5.3862 0.365234H28.6375C29.9651 0.365234 31.2262 0.892484 32.1762 1.83061C33.1262 2.76873 33.6416 4.04173 33.6416 5.36936V28.6206C33.6416 29.9482 33.1143 31.2094 32.1762 32.1594C31.2381 33.1094 29.9651 33.6247 28.6375 33.6247H5.3862ZM25.6925 19.5885H22.1775V31.2022H28.6375C28.9767 31.2032 29.3129 31.137 29.6265 31.0076C29.9402 30.8782 30.2251 30.6881 30.465 30.4482C30.705 30.2083 30.8951 29.9233 31.0245 29.6097C31.1539 29.296 31.22 28.9599 31.2191 28.6206V5.36936C31.2194 5.03025 31.1528 4.6944 31.0232 4.38104C30.8936 4.06769 30.7034 3.78297 30.4636 3.54318C30.2238 3.30339 29.9391 3.11324 29.6258 2.98361C29.3124 2.85398 28.9766 2.78742 28.6375 2.78773H5.3862C4.70209 2.78961 4.04654 3.06221 3.5628 3.54595C3.07906 4.02969 2.80646 4.68525 2.80458 5.36936V28.6206C2.80646 29.3047 3.07906 29.9603 3.5628 30.444C4.04654 30.9278 4.70209 31.2004 5.3862 31.2022H18.3062V19.5885H14.435V15.7172H18.3062V13.6367C18.3062 9.69423 20.2252 7.96048 23.5075 7.96048C25.0441 7.96048 25.8706 8.07211 26.2625 8.12673L26.2862 8.12911V11.8341H24.0537C22.928 11.8341 22.396 12.3162 22.2345 13.2876C22.1957 13.5406 22.1774 13.7964 22.1798 14.0524V15.7077H26.2411L25.6877 19.579L25.6925 19.5885Z"
+                  fill="#19183A"
+                />
+              </svg>
+            </a>
+          </li>
+          <li>
+            <a href="#"
+              ><svg
+                width="38"
+                height="34"
+                viewBox="0 0 38 34"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M36.0951 6.90374C35.9001 7.61874 35.0334 9.41708 33.5601 11.1287C32.5851 29.9354 14.3418 36.0454 1.84012 29.7404C0.128449 27.4654 8.01512 28.3971 10.8968 24.0421C-0.00155081 18.4737 0.865116 3.58874 3.05345 4.19541C8.18845 11.1071 16.4651 11.7354 17.8084 11.1071C17.8084 9.52541 17.1368 6.08041 20.8634 3.19874C23.0084 1.66041 27.4935 0.295411 31.5451 4.69374C32.2385 5.14874 33.2351 5.34374 34.7301 5.01874C35.6185 4.56374 36.7885 4.86708 36.1818 6.44874L36.0951 6.90374Z"
+                  stroke="#19183A"
+                  stroke-width="2.5"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                />
+              </svg>
+            </a>
+          </li>
+          <li>
+            <a href="#"
+              ><svg
+                width="34"
+                height="34"
+                viewBox="0 0 34 34"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M9.99992 0.333984H23.9999C29.3333 0.333984 33.6666 4.66732 33.6666 10.0007V24.0007C33.6666 26.5644 32.6481 29.0232 30.8353 30.836C29.0224 32.6489 26.5637 33.6673 23.9999 33.6673H9.99992C4.66659 33.6673 0.333252 29.334 0.333252 24.0007V10.0007C0.333252 7.43689 1.3517 4.97814 3.16455 3.16529C4.9774 1.35243 7.43616 0.333984 9.99992 0.333984ZM9.66658 3.66732C8.07529 3.66732 6.54916 4.29946 5.42394 5.42468C4.29873 6.5499 3.66659 8.07602 3.66659 9.66732V24.334C3.66659 27.6507 6.34992 30.334 9.66658 30.334H24.3333C25.9245 30.334 27.4507 29.7018 28.5759 28.5766C29.7011 27.4514 30.3333 25.9253 30.3333 24.334V9.66732C30.3333 6.35065 27.6499 3.66732 24.3333 3.66732H9.66658ZM25.7499 6.16732C26.3025 6.16732 26.8324 6.38681 27.2231 6.77751C27.6138 7.16821 27.8333 7.69812 27.8333 8.25065C27.8333 8.80319 27.6138 9.33309 27.2231 9.72379C26.8324 10.1145 26.3025 10.334 25.7499 10.334C25.1974 10.334 24.6675 10.1145 24.2768 9.72379C23.8861 9.33309 23.6666 8.80319 23.6666 8.25065C23.6666 7.69812 23.8861 7.16821 24.2768 6.77751C24.6675 6.38681 25.1974 6.16732 25.7499 6.16732ZM16.9999 8.66732C19.2101 8.66732 21.3297 9.54529 22.8925 11.1081C24.4553 12.6709 25.3333 14.7905 25.3333 17.0007C25.3333 19.2108 24.4553 21.3304 22.8925 22.8932C21.3297 24.456 19.2101 25.334 16.9999 25.334C14.7898 25.334 12.6702 24.456 11.1074 22.8932C9.54456 21.3304 8.66658 19.2108 8.66658 17.0007C8.66658 14.7905 9.54456 12.6709 11.1074 11.1081C12.6702 9.54529 14.7898 8.66732 16.9999 8.66732ZM16.9999 12.0007C15.6738 12.0007 14.4021 12.5274 13.4644 13.4651C12.5267 14.4028 11.9999 15.6746 11.9999 17.0007C11.9999 18.3267 12.5267 19.5985 13.4644 20.5362C14.4021 21.4739 15.6738 22.0007 16.9999 22.0007C18.326 22.0007 19.5978 21.4739 20.5355 20.5362C21.4731 19.5985 21.9999 18.3267 21.9999 17.0007C21.9999 15.6746 21.4731 14.4028 20.5355 13.4651C19.5978 12.5274 18.326 12.0007 16.9999 12.0007Z"
+                  fill="#19183A"
+                />
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </div>
+      <div class="footer__text">
+        <p>&copy; Copyright 2025, All Rights Reserved by Obsidian</p>
+        <br />
+        <a href="">Terms & Conditions</a>
+      </div>
+    </footer>
+
     <script type="module" src="./src/js/script.js"></script>
   </body>
 </html>
