- Added animation for phone mockup and branding - Added vertical ruler at sections hero, industries and challenges

--- a/index.html
+++ b/index.html
@@ -191,15 +191,15 @@
             in the online market
           </p>
         </div>
-        <figure class="approach__laptop-mockup">
+        <figure class="approach__laptop-mockup reveal">
           <img src="./src/images/laptop-mockup.png" alt="Laptop Mockup" />
         </figure>
       </section>
       <section class="branding">
-        <figure class="branding__phone-mockup">
+        <figure class="branding__phone-mockup reveal">
           <img src="./src/images/phone-mockup.png" alt="Phone Mockup" />
         </figure>
-        <figure class="branding__brand">
+        <figure class="branding__brand reveal">
           <img src="./src/images/brand.png" alt="brand" />
         </figure>
       </section>
@@ -360,7 +360,7 @@
             Ayurveda audiences.
           </p>
         </div>
-        <figure class="social-media__image">
+        <figure class="social-media__image reveal">
           <img src="./src/images/instagram-mockup.png" alt="Instagram Mockup" />
         </figure>
       </section>
